--- a/environment.yml
+++ b/environment.yml
@@ -25,38 +25,58 @@ dependencies:
     - asttokens==2.0.5
     - attrs==21.4.0
     - backcall==0.2.0
+    - cycler==0.11.0
+    - decopatch==1.4.10
     - decorator==5.1.1
     - executing==0.8.3
+    - fonttools==4.31.2
+    - gurobipy==9.5.1
     - igraph==0.9.9
     - iniconfig==1.1.1
     - ipdb==0.13.9
     - ipython==8.1.0
     - jedi==0.18.1
+    - joblib==1.1.0
+    - kiwisolver==1.4.2
+    - llvmlite==0.38.0
+    - makefun==1.13.1
+    - matplotlib==3.5.1
     - matplotlib-inline==0.1.3
     - networkx==2.6.3
-    - numpy==1.22.2
+    - numba==0.55.1
+    - numpy==1.21.5
     - packaging==21.3
     - pandapower==2.8.0
     - pandas==1.4.1
     - parso==0.8.3
     - pexpect==4.8.0
     - pickleshare==0.7.5
+    - pillow==9.1.0
     - pluggy==1.0.0
+    - ply==3.11
     - prompt-toolkit==3.0.28
     - ptyprocess==0.7.0
     - pure-eval==0.2.2
     - py==1.11.0
+    - pydot==1.4.2
     - pygments==2.11.2
+    - pyomo==6.3.0
     - pyparsing==3.0.7
     - pytest==7.0.1
+    - pytest-cases==3.6.11
     - python-dateutil==2.8.2
     - pytz==2021.3
+    - scikit-learn==1.0.2
     - scipy==1.8.0
     - six==1.16.0
+    - sklearn==0.0
+    - snakeviz==2.1.1
     - stack-data==0.2.0
     - texttable==1.6.4
+    - threadpoolctl==3.1.0
     - toml==0.10.2
     - tomli==2.0.1
+    - tornado==6.1
     - traitlets==5.1.1
     - wcwidth==0.2.5
 prefix: /Users/leonlan/anaconda3/envs/tree-partitioning
