--- a/environment.yml
+++ b/environment.yml
@@ -4,79 +4,5 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - ca-certificates=2021.10.26=hecd8cb5_2
-  - certifi=2021.10.8=py39hecd8cb5_2
-  - libcxx=12.0.0=h2f01273_0
-  - libffi=3.3=hb1e8313_2
-  - ncurses=6.3=hca72f7f_2
-  - openssl=1.1.1m=hca72f7f_0
-  - pip=21.2.4=py39hecd8cb5_0
-  - python=3.9.7=h88f2d9e_1
-  - readline=8.1.2=hca72f7f_1
-  - setuptools=58.0.4=py39hecd8cb5_0
-  - sqlite=3.37.2=h707629a_0
-  - tk=8.6.11=h7bc2e8c_0
-  - tzdata=2021e=hda174b7_0
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - xz=5.2.5=h1de35cc_0
-  - zlib=1.2.11=h4dc903c_4
-  - pip:
-    - appnope==0.1.2
-    - asttokens==2.0.5
-    - attrs==21.4.0
-    - backcall==0.2.0
-    - cycler==0.11.0
-    - decopatch==1.4.10
-    - decorator==5.1.1
-    - executing==0.8.3
-    - fonttools==4.31.2
-    - gurobipy==9.5.1
-    - igraph==0.9.9
-    - iniconfig==1.1.1
-    - ipdb==0.13.9
-    - ipython==8.1.0
-    - jedi==0.18.1
-    - joblib==1.1.0
-    - kiwisolver==1.4.2
-    - llvmlite==0.38.0
-    - makefun==1.13.1
-    - matplotlib==3.5.1
-    - matplotlib-inline==0.1.3
-    - networkx==2.6.3
-    - numba==0.55.1
-    - numpy==1.21.5
-    - packaging==21.3
-    - pandapower==2.8.0
-    - pandas==1.4.1
-    - parso==0.8.3
-    - pexpect==4.8.0
-    - pickleshare==0.7.5
-    - pillow==9.1.0
-    - pluggy==1.0.0
-    - ply==3.11
-    - prompt-toolkit==3.0.28
-    - ptyprocess==0.7.0
-    - pure-eval==0.2.2
-    - py==1.11.0
-    - pydot==1.4.2
-    - pygments==2.11.2
-    - pyomo==6.3.0
-    - pyparsing==3.0.7
-    - pytest==7.0.1
-    - pytest-cases==3.6.11
-    - python-dateutil==2.8.2
-    - pytz==2021.3
-    - scikit-learn==1.0.2
-    - scipy==1.8.0
-    - six==1.16.0
-    - sklearn==0.0
-    - snakeviz==2.1.1
-    - stack-data==0.2.0
-    - texttable==1.6.4
-    - threadpoolctl==3.1.0
-    - toml==0.10.2
-    - tomli==2.0.1
-    - tornado==6.1
-    - traitlets==5.1.1
-    - wcwidth==0.2.5
+  - python=3.9
 prefix: /Users/leonlan/anaconda3/envs/tree-partitioning
