--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ networkx = "^2.8.5"
 scikit-learn = "^1.1.1"
 Pyomo = "^6.4.1"
 gurobipy = "^9.5.2"
+igraph = "^0.9.11"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
