--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Leon Lan <leon.lanyidong@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "3.8"
+python = "^3.8"
 pandas = "^1.4.3"
 pandapower = "^2.10.1"
 matplotlib = "^3.5.2"
