--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ scikit-learn = "^1.1.1"
 Pyomo = "^6.4.1"
 gurobipy = "^9.5.2"
 igraph = "^0.9.11"
+numba = "^0.56.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.20.0"
