--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ pandapower = "^2.10.1"
 matplotlib = "^3.5.2"
 networkx = "^2.8.5"
 scikit-learn = "^1.1.1"
-Pyomo = "^6.4.1"
+pyomo = "^6.4.1"
 gurobipy = "^9.5.2"
 numba = "^0.56.0"
 
