--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = ">=3.8"
 pandas = "^1.4.3"
-pandapower = "^2.10.1"
+pandapower = "2.9.0"
 matplotlib = "^3.5.2"
 networkx = "^2.8.5"
 scikit-learn = "^1.1.1"
