--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Leon Lan <leon.lanyidong@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = ">=3.8"
+python = "^3.8"
 pandas = "^1.4.3"
 pandapower = "2.9.0"
 matplotlib = "^3.5.2"
@@ -15,6 +15,7 @@ scikit-learn = "^1.1.1"
 pyomo = "^6.4.1"
 gurobipy = "^9.5.2"
 numba = "^0.56.0"
+jupyterlab = "^3.6.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.20.0"
