--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,12 @@ pandas = "^1.4.3"
 pandapower = "2.9.0"
 matplotlib = "^3.5.2"
 networkx = "^2.8.5"
-scikit-learn = "^1.1.1"
 pyomo = "^6.4.1"
 gurobipy = "^9.5.2"
-numba = "^0.56.0"
 jupyterlab = "^3.6.1"
+jupyter-black = "^0.3.3"
+black = "^23.1.0"
+scienceplots = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.20.0"
